--- a/core/new-gui/src/app/workspace/component/workspace.component.scss
+++ b/core/new-gui/src/app/workspace/component/workspace.component.scss
@@ -84,12 +84,13 @@
   grid-row: 1/2;
 }
 
-texera-left-panel{
-  height: calc(100% - 75px);
+#left-panel-container {
+  background: white;
+  height: calc(100% - 76px);
   width: 50%;
   z-index: 1;
   position: absolute;
-  top: 75px;
+  top: 76px;
   left: 0;
 }
 
@@ -116,7 +117,7 @@ texera-left-panel{
 * will occupy the 2nd (middle) columm and use the second row (middle)
 **/
 .texera-workflow-editor-grid-container {
-  grid-column: 2/3;
+  grid-column: 1/3;
   grid-row: 2/4;
 }
 
@@ -135,25 +136,4 @@ texera-left-panel{
 .texera-result-panel-toggle-grid-container {
   grid-column: 2/3;
   grid-row: 4/5;
-}
-
-.texera-git-commit-id {
-  position: absolute;
-  left: 5px;
-  bottom: 5px;
-  font-size: 0.4em;
-  color: gray;
-}
-
-#box {
-  width: 500px;
-  height: 100px;
-  background-color: white;
-  margin-top: 10px;
-  left: 30px;
-}
-
-.particular-version-metadata {
-  display: inline-block;
-  margin-right: 1.25em;
 }
