--- a/core/new-gui/src/app/workspace/component/left-panel/left-panel.component.html
+++ b/core/new-gui/src/app/workspace/component/left-panel/left-panel.component.html
@@ -1,2 +1,3 @@
-<ng-container *ngComponentOutlet="currentComponent;"></ng-container>
-<span id="git-commit-id">Version 0.5.3 <br />Git hash: {{ gitCommitHash }}</span>
+<div id="left-panel-container">
+  <ng-container *ngComponentOutlet="currentComponent;"></ng-container>
+</div>
