--- a/core/new-gui/src/app/workspace/component/left-panel/left-panel.component.scss
+++ b/core/new-gui/src/app/workspace/component/left-panel/left-panel.component.scss
@@ -1,7 +1,6 @@
-#git-commit-id {
-  position: absolute;
-  left: 5px;
-  bottom: 5px;
-  font-size: 0.4em;
-  color: gray;
+
+
+#left-panel-container {
+  background: white;
+  height: calc(100vh - 124px);
 }
