--- a/core/new-gui/src/app/workspace/component/workspace.component.html
+++ b/core/new-gui/src/app/workspace/component/workspace.component.html
@@ -1,4 +1,5 @@
 <div
+  cdkDrag
   id="left-panel"
   nz-resizable
   [nzMinWidth]="200"
@@ -6,7 +7,7 @@
   [style.width.px]="width"
   (nzResize)="onResize($event)"
 >
-  <nz-collapse >
+  <nz-collapse>
     <nz-collapse-panel nzHeader="Operators" [nzActive]="true">
       <texera-left-panel></texera-left-panel>
     </nz-collapse-panel>
