--- a/core/new-gui/src/app/workspace/component/workspace.component.html
+++ b/core/new-gui/src/app/workspace/component/workspace.component.html
@@ -1,20 +1,21 @@
-<div
+<mat-expansion-panel
+  [expanded]="true"
+  hideToggle
   cdkDrag
   id="left-panel"
   nz-resizable
   [nzMinWidth]="200"
   [nzMaxWidth]="screenWidth*0.5"
   [style.width.px]="width"
-  (nzResize)="onResize($event)"
->
-  <nz-collapse>
-    <nz-collapse-panel nzHeader="Operators" [nzActive]="true">
-      <texera-left-panel></texera-left-panel>
-    </nz-collapse-panel>
-  </nz-collapse>
+  (nzResize)="onResize($event)">
+  <mat-expansion-panel-header cdkDragHandle>
+    <mat-panel-title>
+      Operators
+    </mat-panel-title>
+  </mat-expansion-panel-header>
+  <texera-left-panel></texera-left-panel>
   <nz-resize-handles [nzDirections]="['right']"></nz-resize-handles>
-</div>
-
+</mat-expansion-panel>
 <div
   [ngClass]="{
 		'grid-container': true,
