--- a/core/new-gui/src/app/workspace/component/workspace.component.scss
+++ b/core/new-gui/src/app/workspace/component/workspace.component.scss
@@ -88,10 +88,13 @@
   width: 50%;
   z-index: 1;
   position: absolute;
-  top: 75px;
-  left: 0;
+  top: 85px;
+  left: 10px;
   user-select: none;
 }
+
+
+
 
 
 
