--- a/core/new-gui/src/app/workspace/component/workspace.component.scss
+++ b/core/new-gui/src/app/workspace/component/workspace.component.scss
@@ -88,11 +88,18 @@
   width: 50%;
   z-index: 1;
   position: absolute;
-  top: 85px;
-  left: 10px;
+  top: 90px;
+  left: 15px;
   user-select: none;
 }
 
+#boundary{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
 
 
 
