--- a/core/new-gui/src/app/workspace/component/menu/menu.component.html
+++ b/core/new-gui/src/app/workspace/component/menu/menu.component.html
@@ -3,6 +3,7 @@
     <a href="/">
       <img
         alt="Texera"
+        height = "{{userSystemEnabled?75:38}}"
         src="assets/logos/full_logo_small.png" />
     </a>
   </div>
