--- a/core/new-gui/src/app/workspace/component/left-panel/operator-menu/operator-menu.component.html
+++ b/core/new-gui/src/app/workspace/component/left-panel/operator-menu/operator-menu.component.html
@@ -30,7 +30,7 @@
     <ul
       class="operator-submenu"
       nz-menu
-      [nzInlineIndent]=0
+      [nzInlineIndent]="0"
       nzSelectable="false">
       <li
         *ngFor="let operatorSchema of operatorGroupMap.get(groupName)"
