Call service from the frontend and retrieve runtime statistics

--- a/core/new-gui/src/app/dashboard/user/component/user-workflow/ngbd-modal-workflow-executions/ngbd-modal-workflow-executions.component.html
+++ b/core/new-gui/src/app/dashboard/user/component/user-workflow/ngbd-modal-workflow-executions/ngbd-modal-workflow-executions.component.html
@@ -205,7 +205,7 @@
               </td>
               <td nzEllipsis>
                 <i
-                  (click)="showRuntimeStatistics()"
+                  (click)="showRuntimeStatistics(row.eId)"
                   class="fa fa-line-chart"
                   nz-icon
                   nz-tooltip
