--- a/core/new-gui/src/app/workspace/component/left-panel/left-panel.component.html
+++ b/core/new-gui/src/app/workspace/component/left-panel/left-panel.component.html
@@ -1,3 +1,21 @@
-<div id="left-panel-container">
-  <ng-container *ngComponentOutlet="currentComponent;"></ng-container>
+<div id="boundary">
+  <mat-expansion-panel
+    [expanded]="true"
+    hideToggle
+    cdkDrag
+    cdkDragBoundary="#boundary"
+    id="left-panel"
+    nz-resizable
+    [nzMinWidth]="175"
+    [nzMaxWidth]="screenWidth*0.5"
+    [style.width.px]="width"
+    (nzResize)="onResize($event)">
+    <mat-expansion-panel-header cdkDragHandle>
+      <mat-panel-title> Operators </mat-panel-title>
+    </mat-expansion-panel-header>
+    <div id="left-panel-content">
+      <ng-container *ngComponentOutlet="currentComponent;"></ng-container>
+    </div>
+    <nz-resize-handles [nzDirections]="['right']"></nz-resize-handles>
+  </mat-expansion-panel>
 </div>
