Create a new component that displays line chart from chart.js

--- a/core/new-gui/src/app/dashboard/user/component/user-workflow/ngbd-modal-workflow-executions/ngbd-modal-workflow-executions.component.html
+++ b/core/new-gui/src/app/dashboard/user/component/user-workflow/ngbd-modal-workflow-executions/ngbd-modal-workflow-executions.component.html
@@ -210,7 +210,7 @@
                   nz-icon
                   nz-tooltip
                   nzTooltipPlacement="top"
-                  nzTooltipTitle='Display Runtime Statistics'
+                  nzTooltipTitle="Display Runtime Statistics"
                   nzType="line-chart"></i>
               </td>
               <td nzEllipsis>
