--- a/core/new-gui/src/app/workspace/component/left-panel/left-panel.component.scss
+++ b/core/new-gui/src/app/workspace/component/left-panel/left-panel.component.scss
@@ -1,12 +1,4 @@
-#boundary {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-#left-panel {
+#left-panel-container {
   width: 50%;
   z-index: 2;
   position: absolute;
