--- a/core/new-gui/src/app/workspace/component/workflow-editor/context-menu/context-menu/context-menu.component.html
+++ b/core/new-gui/src/app/workspace/component/workflow-editor/context-menu/context-menu/context-menu.component.html
@@ -111,8 +111,10 @@
     nz-menu-item
     *ngIf="operatorMenuService.effectivelyHighlightedOperators.value.length === 1 && isWorkflowModifiable"
     (click)="operatorMenuService.executeUpToOperator()">
-    <span nz-icon nzType="play-circle" nzTheme="outline"></span>
+    <span
+      nz-icon
+      nzType="play-circle"
+      nzTheme="outline"></span>
     execute to this operator
   </li>
-
 </ul>
