change chart.js to plotly.js

--- a/core/new-gui/src/app/dashboard/user/component/user-workflow/ngbd-modal-workflow-executions/workflow-runtime-statistics/workflow-runtime-statistics.component.scss
+++ b/core/new-gui/src/app/dashboard/user/component/user-workflow/ngbd-modal-workflow-executions/workflow-runtime-statistics/workflow-runtime-statistics.component.scss
@@ -1,7 +1,7 @@
-.chart-container {
+.chart-property {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 94vw;
+  width: 95vw;
   height: 88vh;
 }
