--- a/core/new-gui/src/app/workspace/component/left-panel/versions-list/versions-list.component.html
+++ b/core/new-gui/src/app/workspace/component/left-panel/versions-list/versions-list.component.html
@@ -1,3 +1,4 @@
+<h6 id="title">Versions</h6>
 <nz-table
   id="versions-list"
   nzSize="small"
@@ -39,9 +40,3 @@
     </ng-container>
   </tbody>
 </nz-table>
-<button
-  id="close-version"
-  nz-button
-  (click)="workflowVersionService.closeFrame()">
-  close versions
-</button>
