--- a/core/new-gui/src/app/workspace/component/left-panel/versions-list/versions-list.component.scss
+++ b/core/new-gui/src/app/workspace/component/left-panel/versions-list/versions-list.component.scss
@@ -1,3 +1,7 @@
+#title {
+  padding: 10px 15px;
+}
+
 #versions-list ::ng-deep {
   .ant-table-content {
     font-size: 11px;
@@ -11,8 +15,4 @@
   color: black;
   font-size: 11px;
   padding: 0;
-}
-
-#close-version {
-  width: 100%;
 }
