--- a/core/new-gui/src/app/workspace/component/left-panel/left-panel.component.html
+++ b/core/new-gui/src/app/workspace/component/left-panel/left-panel.component.html
@@ -8,18 +8,8 @@
     [nzMaxWidth]="screenWidth*0.5"
     [style.width.px]="width"
     (nzResize)="onResize($event)">
-
+    <h6 id="title" cdkDragHandle><span id="spacer"></span>Operators</h6>
     <ul id="left-dock" nz-menu>
-        <li
-          nz-menu-item
-          nzTooltipPlacement="left"
-          nz-tooltip="Move"
-          nzDisabled
-          cdkDragHandle>
-          <span
-            nz-icon
-            nzType="fullscreen"></span>
-        </li>
         <li
           nz-menu-item
           nzTooltipPlacement="left"
