--- a/core/new-gui/src/app/workspace/component/left-panel/left-panel.component.scss
+++ b/core/new-gui/src/app/workspace/component/left-panel/left-panel.component.scss
@@ -25,7 +25,7 @@
   max-height: calc(100vh - 200px);
   overflow-y: auto;
   display: inline-block;
-  width: calc(100% - 50px)
+  width: calc(100% - 50px);
 }
 
 #left-dock {
