--- a/core/new-gui/src/app/workspace/component/left-panel/left-panel.component.html
+++ b/core/new-gui/src/app/workspace/component/left-panel/left-panel.component.html
@@ -11,7 +11,7 @@
     <h6
       id="title"
       cdkDragHandle>
-      <span id="spacer"></span>Operators
+      <span id="spacer"></span>{{title}}
     </h6>
     <ul
       id="left-dock"
