--- a/core/new-gui/src/app/workspace/component/workflow-editor/mini-map/mini-map.component.scss
+++ b/core/new-gui/src/app/workspace/component/workflow-editor/mini-map/mini-map.component.scss
@@ -1,22 +1,11 @@
-.texera-mini-map-wrapper {
-}
-
-.texera-mini-map-square-container {
-  width: 100%;
-  // position: relative; // component-body's position: absolute requires this to be the first positioned ancestor element
-  pointer-events: none;
-}
-
-.texera-mini-map-navigator {
+#mini-map-navigator {
   border: 1px solid #797a79;
   position: absolute;
-  pointer-events: all;
   cursor: move;
-  z-index: 2;
+  z-index: 1;
 }
 
-.texera-mini-map-button-shown {
-  position: absolute;
-  top: 0px;
-  right: 0px;
+#mini-map {
+  width: 300px;
+  height: 300px;
 }
