--- a/core/new-gui/src/app/workspace/component/left-panel/time-travel/time-travel.component.scss
+++ b/core/new-gui/src/app/workspace/component/left-panel/time-travel/time-travel.component.scss
@@ -2,7 +2,7 @@
   display: grid;
 }
 
-button[disabled] {
+.interaction-item[disabled] {
   pointer-events: none;
   color: #163aec;
   font-weight: bold;
