--- a/core/new-gui/src/material-custom-theme.scss
+++ b/core/new-gui/src/material-custom-theme.scss
@@ -36,7 +36,7 @@ $dark-disabled-text: rgba(rgba(black, 0.87), 0.38);
 $dark-dividers: rgba(rgba(black, 0.87), 0.12);
 $dark-focused: rgba(rgba(black, 0.87), 0.12);
 
-mat.$light-theme-foreground-palette: (
+$mat-light-theme-foreground-palette: (
   base: black,
   divider: rgba(black, 0.12),
   dividers: rgba(black, 0.12),
@@ -63,7 +63,7 @@ $light-disabled-text: rgba(white, 0.5);
 $light-dividers: rgba(white, 0.12);
 $light-focused: rgba(white, 0.12);
 
-mat.$dark-theme-foreground-palette: (
+$mat-dark-theme-foreground-palette: (
   base: $light-text,
   divider: rgba(white, 0.12),
   dividers: rgba(white, 0.12),
@@ -93,7 +93,7 @@ $light-bg-lighter-5: lighten($light-background, 5%);
 $dark-bg-alpha-4: rgba(#2c2c2c, 0.04);
 $dark-bg-alpha-12: rgba(#2c2c2c, 0.12);
 
-mat.$light-theme-background-palette: (
+$mat-light-theme-background-palette: (
   background: $light-background,
   status-bar: $light-bg-darker-20,
   app-bar: $light-bg-darker-5,
@@ -120,7 +120,7 @@ $light-bg-alpha-4: rgba(#fafafa, 0.04);
 $light-bg-alpha-12: rgba(#fafafa, 0.12);
 
 // Background palette for dark themes.
-mat.$dark-theme-background-palette: (
+$mat-dark-theme-background-palette: (
   background: $dark-background,
   status-bar: $dark-bg-lighter-20,
   app-bar: $dark-bg-lighter-5,
