--- a/core/new-gui/src/app/dashboard/user/component/user-workflow/ngbd-modal-workflow-executions/ngbd-modal-workflow-executions.component.html
+++ b/core/new-gui/src/app/dashboard/user/component/user-workflow/ngbd-modal-workflow-executions/ngbd-modal-workflow-executions.component.html
@@ -204,26 +204,24 @@
                   nzTooltipPlacement="top"></i>
               </td>
               <td nzEllipsis>
-                <i
-                  (click)="showRuntimeStatistics(row.eId)"
-                  class="fa fa-line-chart"
-                  nz-icon
-                  nz-tooltip
-                  nzTooltipPlacement="top"
-                  nzTooltipTitle="Display Runtime Statistics"
-                  nzType="line-chart"></i>
+                <button nz-button
+                        nzType="default"
+                        nzSize="large"
+                        (click)="showRuntimeStatistics(row.eId)"
+                        nz-tooltip
+                        nzTooltipTitle="Display Runtime Statistics"
+                        nzTooltipPlacement="top"><span nz-icon nzType="line-chart"></span></button>
               </td>
               <td nzEllipsis>
-                <i
-                  (nzOnConfirm)="onDelete(row)"
-                  class="trash-icon"
-                  nz-icon
-                  nz-popconfirm
-                  nz-tooltip
-                  nzPopconfirmTitle="Confirm to delete this execution."
-                  nzTooltipPlacement="top"
-                  nzTooltipTitle='Delete the Execution "{{row.name}}"'
-                  nzType="delete"></i>
+                <button nz-button
+                        nzType="default"
+                        nzSize="large"
+                        (nzOnConfirm)="onDelete(row)"
+                        nz-tooltip
+                        nzTooltipPlacement="top"
+                        nzTooltipTitle='Delete the Execution "{{row.name}}"'
+                        nz-popconfirm
+                        nzPopconfirmTitle="Confirm to delete this execution."><span nz-icon nzType="delete"></span></button>
               </td>
             </tr>
           </tbody>
