--- a/core/new-gui/src/app/workspace/component/workspace.component.scss
+++ b/core/new-gui/src/app/workspace/component/workspace.component.scss
@@ -82,15 +82,23 @@ texera-menu {
   left: 0;
 }
 
+/** floating right panel**/
 
 #property-editor-container {
   background: white;
-  height: calc(100% - 76px);
+  min-height: 300px;
+  // height: calc(100% - 200px);
   width: 100%;
   z-index: 1;
   position: absolute;
   top: 76px;
   right: 0;
+}
+
+.top-gray-bar {
+  height: 20px; 
+  background-color: lightgray;
+  width: 100%; 
 }
 
 /**
@@ -113,10 +121,10 @@ texera-menu {
 
 /**
 * this style specifies that the workflow editor in the middle
-* will occupy the 2nd (middle) columm and use the second row (middle)
+* will occupy the all columns and use the second row (middle)
 **/
 .texera-workflow-editor-grid-container {
-  grid-column: 1/3;
+  grid-column: 1/4;
   grid-row: 2/4;
 }
 
