--- a/core/new-gui/src/app/workspace/component/left-panel/operator-menu/operator-label/operator-label.component.html
+++ b/core/new-gui/src/app/workspace/component/left-panel/operator-menu/operator-label/operator-label.component.html
@@ -1,14 +1,9 @@
-<div cdkDropList class="box">
+<div cdkDropList>
   <div
     cdkDrag
-    cdkDragBoundary="texera-workspace"
     (cdkDragStarted)="dragStarted()"
     (cdkDragDropped)="dragDropped($event)"
-    (mousedown)="mouseDown()"
-  (mouseleave)="mouseLeave()"
-  (mouseup)="mouseUp()"[attr.id]="operatorLabelID"
-    [ngClass]="{'shake-animation': animate === 'reject',
-               'disable-drag-drop': !draggable}"
+    [ngClass]="{'disable-drag-drop': !draggable}"
     class="operator-label"
     title="{{ operator?.additionalMetadata?.operatorDescription }}">
     <span class="text"> {{ operator?.additionalMetadata?.userFriendlyName }} </span>
