--- a/core/new-gui/src/app/workspace/component/left-panel/operator-menu/operator-label/operator-label.component.html
+++ b/core/new-gui/src/app/workspace/component/left-panel/operator-menu/operator-label/operator-label.component.html
@@ -2,11 +2,11 @@
   <div
     cdkDrag
     (cdkDragStarted)="dragStarted()"
-    (cdkDragDropped)="dragDropped($event)"
+    (cdkDragDropped)="dragDropped($event.dropPoint)"
     [ngClass]="{'disable-drag-drop': !draggable}"
     class="operator-label"
     title="{{ operator?.additionalMetadata?.operatorDescription }}">
     <span class="text"> {{ operator?.additionalMetadata?.userFriendlyName }} </span>
-    <div *cdkDragPreview id="flyingJointPaper"></div>
+    <div *cdkDragPreview id="flyingOP"></div>
   </div>
 </div>
