--- a/core/new-gui/src/app/workspace/component/left-panel/operator-menu/operator-label/operator-label.component.html
+++ b/core/new-gui/src/app/workspace/component/left-panel/operator-menu/operator-label/operator-label.component.html
@@ -7,6 +7,8 @@
     class="operator-label"
     title="{{ operator?.additionalMetadata?.operatorDescription }}">
     <span class="text"> {{ operator?.additionalMetadata?.userFriendlyName }} </span>
-    <div *cdkDragPreview id="flyingOP"></div>
+    <div
+      *cdkDragPreview
+      id="flyingOP"></div>
   </div>
 </div>
