--- a/core/new-gui/src/app/workspace/component/workflow-editor/workflow-editor.component.scss
+++ b/core/new-gui/src/app/workspace/component/workflow-editor/workflow-editor.component.scss
@@ -1,14 +1,11 @@
 @import "../workspace.component.scss";
-.texera-workspace-workflow-editor-body {
+#workflow-editor-wrapper {
   overflow: hidden;
+  height: 100%;
 }
 
-.texera-workspace-workflow-jointjs {
+#workflow-editor {
   background-color: #f6f6f6;
-}
-
-::ng-deep .texera-workspace-workflow-editor-body .custom-highlighted-link.connection {
-  stroke: #e59700 !important ;
 }
 
 /**
@@ -21,36 +18,41 @@
   * !important forces the browser to make the style defined here
   * higher prioritized.
   **/
-::ng-deep .texera-workspace-workflow-editor-body .marker-arrowhead {
+
+::ng-deep #workflow-editor-wrapper .custom-highlighted-link.connection {
+  stroke: #e59700 !important ;
+}
+
+::ng-deep #workflow-editor-wrapper .marker-arrowhead {
   fill: #919191 !important;
 }
 
-::ng-deep .texera-workspace-workflow-editor-body .connection-wrap {
+::ng-deep #workflow-editor-wrapper .connection-wrap {
   stroke: #919191 !important;
   stroke-width: 0 !important;
 }
 
-::ng-deep .texera-workspace-workflow-editor-body .link-tools .tool-remove {
+::ng-deep #workflow-editor-wrapper .link-tools .tool-remove {
   width: 24px !important;
 }
 
-::ng-deep .texera-workspace-workflow-editor-body .link-tools .tool-remove path {
+::ng-deep #workflow-editor-wrapper .link-tools .tool-remove path {
   fill: #d8656a !important;
   transform: translate(-12px, -12px) !important;
 }
 
-::ng-deep .texera-workspace-workflow-editor-body .link-tools .tool-remove circle {
+::ng-deep #workflow-editor-wrapper .link-tools .tool-remove circle {
   fill-opacity: 0 !important;
 }
 
-::ng-deep .texera-workspace-workflow-editor-body .link-tools {
+::ng-deep #workflow-editor-wrapper .link-tools {
   display: contents !important;
 }
 
-::ng-deep .texera-workspace-workflow-editor-body .available-magnet {
+::ng-deep #workflow-editor-wrapper .available-magnet {
   fill: #6f9d52 !important;
 }
 
-::ng-deep .texera-workspace-workflow-editor-body .available-cell rect.body {
+::ng-deep #workflow-editor-wrapper .available-cell rect.body {
   stroke: #70c883 !important;
 }
