--- a/core/new-gui/src/app/workspace/component/workflow-editor/workflow-editor.component.html
+++ b/core/new-gui/src/app/workspace/component/workflow-editor/workflow-editor.component.html
@@ -1,7 +1,11 @@
 <div style="position: relative; width: 100%; height: 100%">
-  <div id="workflow-editor-wrapper"
-    (contextmenu)="contextMenu($event, menu)">
-    <div id="workflow-editor"></div>
+  <div
+    [attr.id]="WORKFLOW_EDITOR_JOINTJS_WRAPPER_ID"
+    (contextmenu)="contextMenu($event, menu)"
+    class="texera-workspace-workflow-editor-body texera-workflow-component-body">
+    <div
+      [attr.id]="WORKFLOW_EDITOR_JOINTJS_ID"
+      class="texera-workspace-workflow-jointjs"></div>
   </div>
 </div>
 
